# marcador

./: .SRCINFO  .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  bk2.c  bookmarkimporter.py  bookmarks  bookmarks.c  bookmarks.h  bookmarks.py  create.sql  marcador.json  marcador.service  requirements.txt  rofi-bookmarks  rofi_bk2  script.sql  setup.cfg  setup.py  trees.c  util.c
.github/workflows/: main.yaml
completions/: _bookmarks
extension/: manifest.json
extension/popup/: marcador.html  marcador.js
input/: buku  example
marcador/: __main__.py  bookmarkimporter.py  bottle.py  json_backend.py  lib.py  marcador_lib.py  marcador_test.py  proxy.py  rofi.py  rofi_marcador.py  server.py  version.py
marcador/scripts/: marcador.py
marcador2/: Cargo.toml
marcador2/migrations/2023-12-18-214551_create_bookmarks/: down.sql  up.sql
marcador2/src/: lib.rs  models.rs  schema.rs  server.rs
scripts/: create_tarball.sh
src/: Makefile  bookmark.rs  bookmark_proxy.rs  bookmarkimporter.py  bookmarks.c  bookmarks.d  bookmarks.h  bookmarks.py  config.rs  create.sql  lib.rs  local_proxy.rs  main.c  main.d  marcador.py  models.rs  remote_proxy.rs  rofi.py  rofi.rs  rofi_interface.rs  rofi_marcador.py  schema.rs  server.rs  setup.py  trees.c  trees.d  trees.h  util.c  util.d  util.h
src/rofi/: pango.rs
systemd/: marcador.service
templates/: template.html
test/: run.sh  test.sh
websockets/: example.js  index.html  server.py
