[package]
name = "marcador"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
open = "5.0"
actix-web = "4"
diesel = { version = "2.1.4", features = ["sqlite"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["blocking", "json"]}
clap = { version = "4", features = ["derive"]}
copypasta = "0.10"
tokio = "1.35"
#rofi = { git = "ssh://git@github.com/joajfreitas/rofi-rs.git"}
thiserror = "1.0.19"
itertools = "0.12"
