[metadata]
name = marcador
version = 0.17.0
author ="João Freitas"
author_email = "joaj.freitas@gmail.com"
license="GPLv3"
url="https://github.com/joajfreitas/marcador"

[options]
packages = marcador
install_requires =
  clipboard
  click
  serde
  sqlalchemy
  appdirs

[options.entry_points]
console_scripts =
  marcador = marcador.__main__:main
