[package]
name = "marcador2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rofi = "0.3"
open = "5.0"
actix-web = "4"
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15"
